GLineGroup and other enhancements